shared/base-application-standalone/ui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ui-base
  labels:
    app.kubernetes.io/created-by: eks-workshop
    app-type: base-application
